feat!: 重构玄同 2.0 控制面与客户端生态
- 基于 Socket.D 与 Multi-Raft 重构配置中心和服务发现控制面
- 完善配置发布、灰度、回滚、监听推送和本地快照机制
- 新增 Spring Cloud、Spring Boot、Solon 和 Java Client 集成
- 重组模块与包结构，XuantongClient 更名为 XuantongConfigClient
- 补充五套示例并重写 README、架构及功能文档
- 清理 1.x 兼容代码、历史方案和无效仓库文件

BREAKING CHANGE: 2.0 不兼容 1.x，客户端 API、包名、模块结构及通信协议均已调整